pod-security-policy/metadata-restrictions/examples/wid_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: MetadataRestrictions
metadata:
  name: enforce-six-digit-wid
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
