pod-security-policy/metadata-restrictions/tests/6-digit-wid-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
   finance.statcan.gc.ca/workload-id: "123456"
