pod-security-policy/metadata-restrictions/tests/na-wid-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
   finance.statcan.gc.ca/workload-id: "N/A"
