pod-security-policy/metadata-restrictions/tests/wid_constraint_NA_test.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: MetadataRestrictions
metadata:
  name: enforce-six-digit-wid
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: finance.statcan.gc.ca/workload-id
        allowedValues: ["N/A"]
        allowedRegex: ["^[0-9]{6}$"]
